# audible_transcriber

./: .gitignore  .prettierignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/workflows/: publish.yml
backend/: acfunctions.py  activation.py  bookmarks.json  main.py  requirements.txt  transcription.py  transofm_transcript.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.tsx
src/: App.svelte  app.css  app.html  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/util/: fs.rs
src/routes/: +page.svelte
src/routes/folder/[name]/: +page.svelte
