[package]
name = "liberate_bookmarks"
version = "0.0.1"
description = "An app that lets you write out the bookmarks you need"
authors = ["mauronermaximilian"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "clipboard-write-text",
    "fs-write-file",
    "protocol-asset",
    "fs-read-dir",
    "fs-read-file",
    "dialog-all",
    "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
dirs-next = "2.0.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
